@@ -1,5 +1,11 @@
 2013-07-09  Dario Rodriguez <dario@artica.es>
 
+	* integria_db.sql: Fixed a mistake in tinventory_track table.
+	* include/functions_incidents.php: Moved "incidents_check_incident_acl"
+	function to enterprise and adapted other funciton to new ubication.
+
+2013-07-09  Dario Rodriguez <dario@artica.es>
+
 	* include/functions.php: Modified functions to render
 	incident priority, now uses number instead of text strings.
   	* include/functions_incidents.php: Add function to deal with
